--- a/index.html
+++ b/index.html
@@ -100,6 +100,94 @@
 
     </header>
 
+    <main>
+        <section class="container">
+            <div class="w-50 mx-auto mt-5 text-center text-dark p-5">
+            <h1 class="display-5">Discover Our Popular Courses</h1>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
+            </div>
+
+            <!-- course catagory start -->
+            <div class="container">
+                <div class="row g-3">
+                  <div class="col-6">
+                    <div class=" border bg-white d-flex align-items-center">
+                        <div>
+                            <img src="images/course/course-1.png" alt="">
+                        </div>
+                        <div class="px-4">
+                            <h5>Fundamental Of UI/UX Design</h5>
+                            <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                            <h5 class="text-primary">Price : 20$</h5>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <div class=" border bg-white d-flex align-items-center">
+                        <div>
+                            <img src="images/course/course-2.png" alt="">
+                        </div>
+                        <div class="px-4">
+                            <h5>Javascript Basic to advanced</h5>
+                            <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                            <h5 class="text-primary">Price : 20$</h5>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <div class=" border bg-white d-flex align-items-center">
+                        <div>
+                            <img src="images/course/course-3.png" alt="">
+                        </div>
+                        <div class="px-4">
+                            <h5>Fullstack Web Development</h5>
+                            <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                            <h5 class="text-primary">Price : 20$</h5>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <div class=" border bg-white d-flex align-items-center">
+                        <div>
+                            <img src="images/course/course-4.png" alt="">
+                        </div>
+                        <div class="px-4">
+                            <h5>Digital Marketing</h5>
+                            <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                            <h5 class="text-primary">Price : 20$</h5>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <div class=" border bg-white d-flex align-items-center">
+                        <div>
+                            <img src="images/course/course-5.png" alt="">
+                        </div>
+                        <div class="px-4">
+                            <h5>Photography Basic Rules</h5>
+                            <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                            <h5 class="text-primary">Price : 20$</h5>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <div class=" border bg-white d-flex align-items-center">
+                        <div>
+                            <img src="images/course/course-6.png" alt="">
+                        </div>
+                        <div class="px-4">
+                            <h5>Motion Graphics</h5>
+                            <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                            <h5 class="text-primary">Price : 20$</h5>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            <!-- course catagory end -->
+        </section>
+    </main>
+
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
