--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Coursera Lite</title>
+    <title>Edify</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
     <!-- header section  -->
-    <header class="container">
+    <header class="container mb-5">
 
         <!-- navbar section start -->
         <nav class="navbar navbar-expand-lg bg-white">
@@ -94,7 +94,7 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
-          </div> 
+          </div>  
 
           <!-- slider section end -->
 
@@ -102,80 +102,85 @@
 
     <main>
         <section class="container">
-            <div class="w-50 mx-auto mt-5 text-center text-dark p-5">
-            <h1 class="display-5">Discover Our Popular Courses</h1>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
+            <!-- <div class="container-fluid w-50  mx-auto mt-5 text-center text-dark p-5">  -->
+                <!-- <div class="d-flex flex-column justify-content-center align-items-center border border-danger p-5 m-5 w-md-50 mx-auto text-center"> -->
+      
+                <div class=" text-center">
+                    <h2>Discover Our Popular Courses</h2>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
+               
             </div>
-
+            <!-- </div>  -->
+                <!-- </div> -->
             <!-- course catagory start -->
             <div class="container">
                 <div class="row g-3">
-                  <div class="col-6">
-                    <div class=" border bg-white d-flex align-items-center">
+                  <div class="col-12 col-lg-6">
+                    <div class=" border rounded bg-white d-md-flex align-items-center">
                         <div>
-                            <img src="images/course/course-1.png" alt="">
+                            <img src="images/course/course-1.png" alt="" class="w-100">
                         </div>
-                        <div class="px-4">
+                        <div class="px-3 container-fluid mt-3">
                             <h5>Fundamental Of UI/UX Design</h5>
                             <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
                             <h5 class="text-primary">Price : 20$</h5>
                         </div>
                     </div>
                   </div>
-                  <div class="col-6">
-                    <div class=" border bg-white d-flex align-items-center">
+                  <div class="col-12  col-lg-6">
+                    <div class=" border rounded bg-white d-md-flex align-items-center">
                         <div>
-                            <img src="images/course/course-2.png" alt="">
+                            <img src="images/course/course-2.png" alt="" class="w-100">
                         </div>
-                        <div class="px-4">
+                        <div class="px-3 container-fluid mt-3">
                             <h5>Javascript Basic to advanced</h5>
                             <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
                             <h5 class="text-primary">Price : 20$</h5>
                         </div>
                     </div>
                   </div>
-                  <div class="col-6">
-                    <div class=" border bg-white d-flex align-items-center">
+                  <div class="col-12  col-lg-6">
+                    <div class=" border rounded bg-white d-md-flex align-items-center">
                         <div>
-                            <img src="images/course/course-3.png" alt="">
+                            <img src="images/course/course-3.png" alt="" class="w-100">
                         </div>
-                        <div class="px-4">
+                        <div class="px-3 container-fluid mt-3">
                             <h5>Fullstack Web Development</h5>
                             <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
                             <h5 class="text-primary">Price : 20$</h5>
                         </div>
                     </div>
                   </div>
-                  <div class="col-6">
-                    <div class=" border bg-white d-flex align-items-center">
+                  <div class="col-12  col-lg-6 d-none d-md-none d-lg-block">
+                    <div class=" border rounded bg-white d-md-flex align-items-center">
                         <div>
-                            <img src="images/course/course-4.png" alt="">
+                            <img src="images/course/course-4.png" alt="" class="w-100">
                         </div>
-                        <div class="px-4">
+                        <div class="px-3 container-fluid mt-3">
                             <h5>Digital Marketing</h5>
                             <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
                             <h5 class="text-primary">Price : 20$</h5>
                         </div>
                     </div>
                   </div>
-                  <div class="col-6">
-                    <div class=" border bg-white d-flex align-items-center">
+                  <div class="col-12  col-lg-6 d-none d-md-none d-lg-block">
+                    <div class=" border rounded bg-white d-md-flex align-items-center">
                         <div>
-                            <img src="images/course/course-5.png" alt="">
+                            <img src="images/course/course-5.png" alt="" class="w-100">
                         </div>
-                        <div class="px-4">
+                        <div class="px-3 container-fluid mt-3">
                             <h5>Photography Basic Rules</h5>
                             <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
                             <h5 class="text-primary">Price : 20$</h5>
                         </div>
                     </div>
                   </div>
-                  <div class="col-6">
-                    <div class=" border bg-white d-flex align-items-center">
+                  <div class="col-12 col-lg-6 d-none d-md-none d-lg-block">
+                    <div class=" border rounded bg-white d-md-flex align-items-center">
                         <div>
-                            <img src="images/course/course-6.png" alt="">
+                            <img src="images/course/course-6.png" alt="" class="w-100">
                         </div>
-                        <div class="px-4">
+                        <div class="px-3 container-fluid mt-3">
                             <h5>Motion Graphics</h5>
                             <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
                             <h5 class="text-primary">Price : 20$</h5>
@@ -183,6 +188,10 @@
                     </div>
                   </div>
                 </div>
+              </div> 
+
+              <div class="d-flex justify-content-center my-5">
+                <button type="button" class="btn btn-primary px-4 py-2 " >See More Courses</button>
               </div>
             <!-- course catagory end -->
         </section>
