--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                       </ul>
                 
 
-                <button class="btn btn-white text-primary border-primary px-4 py-2 ms-0">Register</button>
+                <button class="btn btn-outline-primary px-4 py-2 ms-0">Register</button>
                 <!-- <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                   <button class="btn btn-outline-success" type="submit">Register</button>
@@ -67,25 +67,44 @@
                 <div class="carousel-item active">
                   <img src="images/cover/cover-1.png" class="d-block w-100 rounded" alt="...">
                   <div style="top:20%" class="carousel-caption d-block d-md-block w-50 mx-auto"> 
-                       <h1 class="display-3">Get Started Digital Learning</h1>
-                       <p>It is a long established fact that a reader will be distracted by the readable content of a    page when looking at its layout</p>
-                       <button type="button" class="btn btn-primary px-4 py-2">Get Started</button>
+                       <h1 style="font-size: 4vw">Get Started Digital Learning</h1>
+                       <p class="d-none d-md-block">It is a long established fact that a reader will be distracted by the readable content of a  page when looking at its layout</p>
+                       <p style="font-size: 2vw" class="d-md-none d-block">It is a long established fact that a reader will be distracted by the readable content of a  page when looking at its layout</p>
+                      <div class="d-none d-md-block">
+                        <button type="button" class="btn btn-primary px-4 py-2 ">Get Started</button>
+                      </div>
+                      <div class="d-block d-md-none">
+                        <button type="button" class="btn btn-primary btn-sm ">Get Started</button>
+                      </div>
+                        
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img src="images/cover/cover-2.jpg" class="d-block w-100 rounded" alt="..." class="img-fluid">
-                  <div style="top:20%" class="carousel-caption d-none d-md-block w-50 mx-auto"> 
-                       <h1 class="display-3">Get Started Digital Learning</h1>
-                       <p>It is a long established fact that a reader will be distracted by the readable content of a    page when looking at its layout</p>
-                       <button type="button" class="btn btn-primary px-4 py-2">Get Started</button>
+                  <div style="top:20%" class="carousel-caption d-block d-md-block w-50 mx-auto"> 
+                    <h1 style="font-size: 4vw">Get Started Digital Learning</h1>
+                    <p class="d-none d-md-block">It is a long established fact that a reader will be distracted by the readable content of a  page when looking at its layout</p>
+                    <p style="font-size: 2vw" class="d-md-none d-block">It is a long established fact that a reader will be distracted by the readable content of a  page when looking at its layout</p>
+                   <div class="d-none d-md-block">
+                     <button type="button" class="btn btn-primary px-4 py-2 ">Get Started</button>
+                   </div>
+                   <div class="d-block d-md-none">
+                     <button type="button" class="btn btn-primary btn-sm ">Get Started</button>
+                   </div>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img src="images/cover/cover-3.jpg" class="d-block w-100 rounded" alt="...">
-                  <div style="top:20%" class="carousel-caption d-none d-md-block w-50 mx-auto"> 
-                       <h1 class="display-3">Get Started Digital Learning</h1>
-                       <p>It is a long established fact that a reader will be distracted by the readable content of a  page when looking at its layout</p>
-                       <button type="button" class="btn btn-primary px-4 py-2">Get Started</button>
+                  <div style="top:20%" class="carousel-caption d-block d-md-block w-50 mx-auto"> 
+                    <h1 style="font-size: 4vw">Get Started Digital Learning</h1>
+                    <p class="d-none d-md-block">It is a long established fact that a reader will be distracted by the readable content of a  page when looking at its layout</p>
+                    <p style="font-size: 2vw" class="d-md-none d-block">It is a long established fact that a reader will be distracted by the readable content of a  page when looking at its layout</p>
+                   <div class="d-none d-md-block">
+                     <button type="button" class="btn btn-primary px-4 py-2 ">Get Started</button>
+                   </div>
+                   <div class="d-block d-md-none">
+                     <button type="button" class="btn btn-primary btn-sm ">Get Started</button>
+                   </div>
                   </div>
                 </div>
               </div>
