--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- navbar section start -->
         <nav class="navbar navbar-expand-lg bg-white">
             <div class="container-fluid">
-              <a class="navbar-brand fs-3 me-5" href="#">Edify</a>
+              <a class="navbar-brand fs-3 me-5 web-name" href="#"><b>Edify</b></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
               </button>
@@ -48,7 +48,7 @@
                       </ul>
                 
 
-                <button class="btn btn-outline-primary px-4 py-2 ms-0">Register</button>
+                <button class="btn btn-outline-primary px-4 py-2 ms-0 ">Register</button>
 
               </div>
             </div>
@@ -227,7 +227,7 @@
         <!--Ready to Join section start-->
    
             <header class="container py-5">
-              <section class="bg-primary container d-lg-flex d-sm-flex flex-lg-row flex-sm-column align-items-center justify-content-lg-between justify-content-sm-center text-white py-4 " >
+              <section class="container d-lg-flex d-sm-flex flex-lg-row flex-sm-column align-items-center justify-content-lg-between justify-content-sm-center text-white py-4 color--change" >
                 <div class="d-flex flex-column p-lg-5 align-items-lg-start align-items-sm-center justify-content-sm-center">
                   <h1 class="text-center">Ready to join?</h1>
                   <p class="d-none d-md-none d-lg-block">It is a long established fact that a reader will be distracted by the <br>readable content of a page when looking at its layout </p>
